[TASK] use bootstrap classes for breadcrumb

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -71,7 +71,7 @@
 			</div>
 		</nav>
 		<div class="row">
-			<div class="col-8 breadcrumb"></div>
+			<div class="col-8"><ul class="breadcrumb"></ul></div>
 			<div class="col-4 search"><input id="search" type="search"/></div>
 		</div>
 	</div>
