[TASK] add search action

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -72,7 +72,7 @@
 		</nav>
 		<div class="row">
 			<div class="col-8"><ol class="breadcrumb"></ol></div>
-			<div class="col-4 search"><input id="search" type="search"/></div>
+			<div class="col-4 search"><input id="search" type="search" data-parameter-for="search"/><button class="btn search-action" data-action="search">Search</button></div>
 		</div>
 	</div>
 	<div class="dropzone hidden" >
