--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -3,25 +3,25 @@
 	  data-namespace-typo3-fluid="true">
 
 <!--<div class="page-header">-->
-	<!--<h1><f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.dam" />&nbsp;-->
-		<!--<small><f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.hereareyourfiles" />.</small></h1>-->
+<!--<h1><f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.dam" />&nbsp;-->
+<!--<small><f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.hereareyourfiles" />.</small></h1>-->
 <!--</div>-->
 
-<div class="digital-asset-management" >
+<div class="digital-asset-management">
 	<div class="body t3js-drag-uploader" data-target-folder="1:/" data-progress-container=".upload-progress"
 		 data-dropzone-trigger=".t3js-drag-uploader-trigger" data-dropzone-target=".dropzone"
 		 data-file-deny-pattern="" data-max-file-size="123456789">
 		<!--<div class="col-xs-12 col-md-2">-->
-			<!--<div class="navbar">-->
-				<!--Suche-->
-			<!--</div>-->
-			<!--<div>-->
-				<!--<ul>-->
-					<!--<li>Dateien</li>-->
-					<!--<li>Favoriten</li>-->
-					<!--<li>Zuletzt verwendet</li>-->
-				<!--</ul>-->
-			<!--</div>-->
+		<!--<div class="navbar">-->
+		<!--Suche-->
+		<!--</div>-->
+		<!--<div>-->
+		<!--<ul>-->
+		<!--<li>Dateien</li>-->
+		<!--<li>Favoriten</li>-->
+		<!--<li>Zuletzt verwendet</li>-->
+		<!--</ul>-->
+		<!--</div>-->
 		<!--</div>-->
 		<div class="col-12">
 			<div class="body">
@@ -38,9 +38,12 @@
 								<div class="icon apps-pagetree-page-default"></div>
 							</div>
 							<div class="info">
-								<div class="grid-cell filename sort-action" data-action="sort-by-name"><p>Filename trans</p></div>
-								<div class="grid-cell filesize sort-action" data-action="sort-by-size"><p>Size trans</p></div>
-								<div class="grid-cell moddate sort-action" data-action="sort-by-date"><p>Modification date trans</p></div>
+								<div class="grid-cell filename sort-action" data-action="sort-by-name"><p>Filename
+									trans</p></div>
+								<div class="grid-cell filesize sort-action" data-action="sort-by-size"><p>Size trans</p>
+								</div>
+								<div class="grid-cell moddate sort-action" data-action="sort-by-date"><p>Modification
+									date trans</p></div>
 							</div>
 						</div>
 					</div>
@@ -54,33 +57,44 @@
 		</div>
 		<div class="errorlog col-12"></div>
 	</div>
-	<div class="module-header col-12">
-		<nav class="navbar bg-navbar navbar-expand-lg">
-			<a class="navbar-brand" href="#">&nbsp;</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+	<div class="module-docheader     module-headerxx col-12xx">
+		<div class="module-docheader-bar">&nbsp;</div>
+		<div class="module-docheader-bar     navbarxx bg-navbarxx navbar-expand-lgxx">
+			<!--<a class="navbar-brand" href="#">&nbsp;</a>-->
+			<!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
+					<!--aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+				<!--<span class="navbar-toggler-icon"></span>-->
+			<!--</button>-->
 
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<f:render section="buttonbar-left" />
-				<f:render section="buttonbar-right" />
+			<!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+				<div class="module-docheader-bar-column-left">
+					<f:render section="buttonbar-left"/>
+				</div>
+				<div class="module-docheader-bar-column-right">
+					<f:render section="buttonbar-right"/>
+				</div>
 				<!--<form class="form-inline my-2 my-lg-0">-->
 				<!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
 				<!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
 				<!--</form>-->
-			</div>
-		</nav>
+			<!--</div>-->
+		</div>
 		<div class="row">
-			<div class="col-8"><ol class="breadcrumb"></ol></div>
-			<div class="col-4 search"><input id="search" type="search" data-parameter-for="search"/><button class="btn search-action" data-action="search">Search</button></div>
+			<div class="col-8">
+				<ol class="breadcrumb"></ol>
+			</div>
+			<div class="col-4 search"><input id="search" type="search" data-parameter-for="search"/>
+				<button class="btn search-action" data-action="search">Search</button>
+			</div>
 		</div>
 	</div>
-	<div class="dropzone hidden" >
+	<div class="dropzone hidden">
 		<div class="dropzone-hint localize" data-l10nkey="dam.labels.dropyourfileshere"></div>
 	</div>
 	<div class="well upload-in-progress hidden">
 		<div class="view-action" data-action="showUploadProgress" data-parameter="">
-			<span class="icon icons-size-medium icon-spinner-circle" ></span><span class="localize" data-l10nkey="dam.labels.uploadinprogress">Upload in progress!</span>
+			<span class="icon icons-size-medium icon-spinner-circle"></span><span class="localize"
+																				  data-l10nkey="dam.labels.uploadinprogress">Upload in progress!</span>
 		</div>
 	</div>
 	<div class="well upload-progress hidden">
@@ -89,106 +103,165 @@
 		</ul>
 	</div>
 </div>
-</html>
 
 
 <f:section name="buttonbar-left">
-	<ul class="navbar-nav mr-auto">
-		<li class="nav-item newaction">
-			<div class="nav-link view-action active" data-action="newFile" data-parameter="">
-				<span class="icon icon-size-small icon-actions-document-new"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.new"/>
-			</div>
-		</li>
-		<li class="nav-item newaction">
-			<div class="nav-link view-action active" data-action="upload" data-parameter="">
-				<span class="icon icon-size-small icon-actions-edit-upload"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.upload"/>
-			</div>
-		</li>
+	<div class="btn-toolbar" role="toolbar">
+		<a href="#" class="nav-item newaction btn btn-default btn-sm view-action" data-action="newFile"
+		   data-parameter="" title="">
+			<core:icon identifier="actions-add" size="small"/>
+			<f:translate
+					key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.new"/>
+		</a>
+		<a href="#" class="nav-item newaction btn btn-default btn-sm view-action" data-action="upload"
+		   data-parameter="" title="">
+			<core:icon identifier="actions-edit-upload" size="small"/>
+			<f:translate
+					key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.upload"/>
+		</a>
 
-		<li class="nav-item fileaction">
-			<div class="nav-link ajax-action active" data-action="delete" data-parameter="selected">
-				<span class="icon icon-size-small icon-actions-delete"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.delete"/>
-			</div>
-		</li>
-		<li class="nav-item fileaction">
-			<div class="nav-link view-action active" data-action="move" data-parameter="">
-				<span class="icon icon-size-small icon-actions-move"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.move"/>
-			</div>
-		</li>
-		<li class="nav-item fileaction">
-			<div class="nav-link view-action active" data-action="copy" data-parameter="">
-				<span class="icon icon-size-small icon-actions-edit-copy"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.copy"/>
-			</div>
-		</li>
-		<li class="nav-item fileaction">
-			<div class="nav-link select-action active" data-action="deselectAll" data-parameter="">
-				<span class="icon icon-size-small icon-actions-close"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.deselectall"/>
-			</div>
-		</li>
-		<li class="nav-item fileaction">
+		<a href="#" class="nav-item fileaction btn btn-default btn-sm view-action" data-action="delete"
+		   data-parameter="" title="">
+			<core:icon identifier="actions-delete" size="small"/>
+			<f:translate
+					key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.delete"/>
+		</a>
+		<a href="#" class="nav-item fileaction btn btn-default btn-sm view-action" data-action="move"
+		   data-parameter="" title="">
+			<core:icon identifier="actions-move" size="small"/>
+			<f:translate
+					key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.move"/>
+		</a>
+		<a href="#" class="nav-item fileaction btn btn-default btn-sm view-action" data-action="copy"
+		   data-parameter="" title="">
+			<core:icon identifier="actions-edit-copy" size="small"/>
+			<f:translate
+					key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.copy"/>
+		</a>
+		<a href="#" class="nav-item fileaction btn btn-default btn-sm view-action" data-action="deselectAll"
+		   data-parameter="" title="">
+			<core:icon identifier="actions-close" size="small"/>
+			<f:translate
+					key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.deselectall"/>
+		</a>
+
+
+		<!--<li class="nav-item fileaction">-->
+		<!--<div class="nav-link ajax-action active" data-action="delete" data-parameter="selected">-->
+		<!--<span class="icon icon-size-small icon-actions-delete"></span>-->
+		<!--<f:translate-->
+		<!--key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.delete"/>-->
+		<!--</div>-->
+		<!--</li>-->
+		<!--<li class="nav-item fileaction">-->
+		<!--<div class="nav-link view-action active" data-action="move" data-parameter="">-->
+		<!--<span class="icon icon-size-small icon-actions-move"></span>-->
+		<!--<f:translate-->
+		<!--key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.move"/>-->
+		<!--</div>-->
+		<!--</li>-->
+		<!--<li class="nav-item fileaction">-->
+		<!--<div class="nav-link view-action active" data-action="copy" data-parameter="">-->
+		<!--<span class="icon icon-size-small icon-actions-edit-copy"></span>-->
+		<!--<f:translate-->
+		<!--key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.copy"/>-->
+		<!--</div>-->
+		<!--</li>-->
+		<!--<li class="nav-item fileaction">-->
+		<!--<div class="nav-link select-action active" data-action="deselectAll" data-parameter="">-->
+		<!--<span class="icon icon-size-small icon-actions-close"></span>-->
+		<!--<f:translate-->
+		<!--key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.deselectall"/>-->
+		<!--</div>-->
+		<!--</li>-->
+		<span class="nav-item fileaction">
 			<div class="filesselected"></div>
-		</li>
+		</span>
 
-	</ul>
+	</div>
 </f:section>
 
 
 <f:section name="buttonbar-right">
-	<ul class="navbar-nav my-2">
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarSortingDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	<div class="btn-toolbar" role="toolbar">
+		<div class="btn-group">
+			<button type="button" data-toggle="dropdown" class="btn btn-default btn-sm dropdown-toggle"><core:icon identifier="actions-document-export-t3d" size="small"/> Action</button>
+			<ul class="dropdown-menu">
+				<li><a href="#">Action</a></li>
+				<li><a href="#">Another action</a></li>
+				<li class="divider"></li>
+				<li><a href="#">Separated link</a></li>
+			</ul>
+		</div>
+
+		<div class="nav-item btn-group dropdown">
+			<a class="nav-link dropdown-toggle btn btn-default" href="#" id="navbarSortingDropdown" role="button" data-toggle="dropdown"
+			   aria-haspopup="true" aria-expanded="false">
 				<span class="icon icon-size-small icon-actions-document-export-t3d"></span>
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting"/>
+				<f:translate
+						key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting"/>
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				<div class="dropdown-item sort-action sort-field" data-action="sort-by-name">
 					<span class="icon icon-size-small icon-actions-edit-upload"></span>
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.name"/></div>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.name"/>
+				</div>
 				<div class="dropdown-item sort-action sort-field" data-action="sort-by-date">
 					<span class="icon icon-size-small icon-actions-edit-pick-date"></span>
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.date"/></div>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.date"/>
+				</div>
 				<div class="dropdown-item sort-action sort-field" data-action="sort-by-size">
 					<span class="icon icon-size-small icon-actions-edit-download"></span>
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.size"/></div>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.size"/>
+				</div>
 				<div class="dropdown-divider"></div>
 				<div class="dropdown-item sort-action sort-order" data-action="sort-order-asc" data-parameter="asc">
 					<span class="icon icon-size-small icon-actions-document-export-t3d"></span>
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.asc"/></div>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.asc"/>
+				</div>
 				<div class="dropdown-item sort-action sort-order" data-action="sort-order-dsc" data-parameter="dsc">
 					<span class="icon icon-size-small icon-actions-document-import-t3d"></span>
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.dsc"/></div>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.dsc"/>
+				</div>
 			</div>
-		</li>
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				<core:icon identifier="actions-view" />
-				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view"/>
+		</div>
+		<div class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+			   aria-haspopup="true" aria-expanded="false">
+				<core:icon identifier="actions-menu"/>
+				<f:translate
+						key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view"/>
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				<div class="dropdown-item view-action" data-action="view-list">
-					<core:icon identifier="content-menu-thumbnail" />
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view.list"/></div>
+					<core:icon identifier="content-menu-thumbnail"/>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view.list"/>
+				</div>
 				<div class="dropdown-item view-action" data-action="view-symbols">
-					<core:icon identifier="content-image" />
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view.symbols"/></div>
+					<core:icon identifier="content-image"/>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view.symbols"/>
+				</div>
 				<div class="dropdown-divider"></div>
 				<div class="dropdown-item view-action" data-action="view-photo">
-					<core:icon identifier="content-menu-thumbnail" />
-					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view.photos"/></div>
+					<core:icon identifier="content-menu-thumbnail"/>
+					<f:translate
+							key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.view.photos"/>
+				</div>
 			</div>
-		</li>
-		<li class="nav-item">
+		</div>
+		<div class="nav-item">
 			<div class="ajax-action nav-link disabled" data-action="reindexStorage" data-parameter="#current#">
-				<core:icon identifier="actions-refresh" />
+				<core:icon identifier="actions-refresh"/>
 			</div>
-		</li>
-	</ul>
+		</div>
+	</div>
 </f:section>
 
 <f:section name="fileactions">
@@ -199,3 +272,5 @@
 <f:section name="folderactions">
 
 </f:section>
+
+</html>
