[TASK] Refactor base component markup and CSS

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -2,6 +2,6 @@
 	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
 	  data-namespace-typo3-fluid="true">
 
-<div id="app"></div>
+<div id="app" class="container-fluid"></div>
 
 </html>
